# skd-nexus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: EXAMPLES.md  KEYWORDS.md  NAMING_CONVENTIONS.md  SPECIFICATION.md
examples/: dependency_resolve.py  install_order.py  resolve_dependency.py  validate_meta.py
examples/modules/base/: __meta__.py
examples/modules/inventory/: __meta__.py
examples/modules/sales/: __meta__.py
src/sdk/: __init__.py  constants.py  contracts.py  exceptions.py  installer.py  registry.py  resolver.py  validator.py
src/sdk/_future/contracts/: contracts.py
src/sdk/_future/extensions/: base_adapter.py
src/sdk/contracts/: component.py
src/sdk/dependency/: __init__.py  dependency_graph.py  errors.py  exceptions.py  resolver.py  version_resolver.py
src/sdk/schemas/: __init__.py  meta_schema.py
src/sdk/utils/: __init__.py  meta_parser.py
src/sdk/validation/: __init__.py  component_validator.py  dependency_validator.py  structure_validator.py
tests/: test_installer.py  test_validator.py
