[project]
name = "sdk"
version = "0.1.0"
description = "SDK puro Python para crear componentes compatibles con ERP NEXUS"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "semantic-version>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
